# expense-tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  categories.json  dashboard.py  docker-compose.yml  expenses.py  gatekeeper.py  login.py  pyproject.toml  requirements.txt  setup.cfg
pages/: explore.py
src/expense_tracker/: dashboard.py  db.py  expenses.py  globals.py  login.py  metric.py  models.py  utils.py
src/expense_tracker/pages/: categories.py  explore.py
