[metadata]
name = expense-tracker
version = 0.0.1
description = Streamlit application to keep track of expenses defined in splitwise.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VictorGardi/expense-tracker
author = Victor Olsson
author_email = victor.olssn@gmail.com
license_file = LICENSE

[options]
packages = find:
install_requires =
package_dir =
    = src

[options.packages.find]
where = src
exclude = tests*

[options.extras_require]
dev =
    pre-commit
    pytest
    coverage
    covdefaults

[flake8]
ignore =
    # space before : (needed for how black formats slicing)
    E203,
    # line break before binary operator
    W503
max-line-length = 88
select = B,C,E,F,W,T4,B9

[pydocstyle]
match-dir=src
match=(?!test_).*\.py|.*(?!_test).py

[tool.isort]
profile = "black"

[coverage:run]
plugins = covdefaults
source = python_module

[coverage:report]
skip_covered = False
fail_under = 100
